Added history and tweaked styles

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <div id="display">
-        <p id="history">0</p>
-        <p id="result">0</p>
+        <p id="history"></p>
+        <p id="result"></p>
     </div>
     <div id="keypad">
-      <div>
+      <div id="clear">
         <button name="Backspace">&larr;</button>
         <button name="C">C</button>
       </div>
