Improved keyboard support and general cleanup

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div id="keypad">
       <div id="clear">
         <button name="Backspace">&larr;</button>
-        <button name="C">C</button>
+        <button id="CE" name="Delete">CE</button>
+        <button name="Escape">C</button>
       </div>
       <div>
         <button name="7">7</button>
